# Lucid

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.py  inference.py  main.py  pyproject.toml  requirements.txt
.github/.workflows/: ci.yml
configs/: bt_unet.yaml  default.yaml  swinunet.yaml  unet.yaml
data/: README.md  __init__.py  preprocessing.py
models/: __init__.py  bt_unet.py  data_consistency.py  swinunet.py  unet.py
notebooks/: results_visualization.ipynb  results_visualizations.ipynb
tests/: test_data.py  test_models.py  test_training.py
training/: __init__.py  evaluate.py  losses.py  train.py
utils/: __init__.py  ema.py  logger.py  reproductibility.py  schedulers.py  visualizations.py
